<resources>
    <string name="app_name">Android Design</string>
    <string name="splash_screen_background_image">Splash screen background image</string>
    <string name="coffee_dev">Coffee Dev</string>
    <string name="your_name">Your Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="i_m_already_a_dev">I\'M ALREADY A DEV</string>
    <string name="create_my_account">CREATE MY ACCOUNT</string>
    <string name="or_login_with">or login with</string>
    <string name="log_in">LOG IN</string>
    <string name="lost_password">Lost Password?</string>
    <string name="forrest_knight">Forrest Knight</string>
    <string name="ios_developer">iOS Developer</string>
    <string name="virginia_beach_va">Virginia Beach, VA</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="home">home</string>
    <string name="search">search</string>
    <string name="add">Add</string>
    <string name="hearth">hearth</string>
    <string name="profile">profile</string>
    <string name="avatar">avatar</string>
    <string name="portfolio">Portfolio</string>
    <string name="about">About</string>
    <string name="hire">Hire</string>
    <string name="background">Background</string>
    <string name="this_is_where_you_will_enter_your_background_story_info_how_you_got_into_this_why_you_like_it_make_people_like_you_by_sharing_your_personal_story">
        This is where you will enter your background story/info. How you got into this, why you like it; make people
        like you by sharing your personal story.
    </string>
    <string name="skills">Skills</string>
    <string name="background_image">background image</string>
    <string name="preview_of_a_video">preview of a video</string>
    <string name="_HIRE">HIRE</string>
    <string name="connecting_you_with_hand_selected_software_developers">Connecting you with hand selected software
        developers.
    </string>
    <string name="get">GET</string>
    <string name="_search">Search</string>
    <string name="featured_developer">Featured Developer</string>
    <string name="error">Error with HTTP connection!</string>
    <string name="developers">Developers</string>
</resources>
