<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:id="@+id/ivBackgroundNotebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/background_notebook"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorBackgroundSmoke"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/image_photographer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/ivBackgroundNotebook"
            app:layout_constraintVertical_bias="0.15"
            android:contentDescription="@string/avatar"/>

    <TextView
            android:id="@+id/tvProfileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forrest_knight"
            android:fontFamily="@font/rockwell"
            android:textSize="22sp"
            app:layout_constraintTop_toBottomOf="@id/ivAvatar"
            app:layout_constraintBottom_toBottomOf="@id/ivBackgroundNotebook"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.057"/>

    <TextView
            android:id="@+id/tvProfession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ios_developer"
            android:fontFamily="@font/rockwell"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/viewVerticalLine"
            app:layout_constraintTop_toBottomOf="@id/tvProfileName"
            app:layout_constraintBottom_toBottomOf="@id/ivBackgroundNotebook"
            app:layout_constraintVertical_bias="0.0675"
            app:layout_constraintHorizontal_chainStyle="spread"/>

    <View
            android:id="@+id/viewVerticalLine"
            android:layout_width="2dp"
            android:layout_height="14dp"
            android:background="@color/colorWhite"
            app:layout_constraintStart_toEndOf="@id/tvProfession"
            app:layout_constraintTop_toTopOf="@id/tvProfession"
            app:layout_constraintBottom_toBottomOf="@id/tvProfession"
            app:layout_constraintEnd_toStartOf="@id/tvAddress"/>

    <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/virginia_beach_va"
            android:fontFamily="@font/rockwell"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="@id/viewVerticalLine"
            app:layout_constraintStart_toEndOf="@id/viewVerticalLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/viewVerticalLine" />


</androidx.constraintlayout.widget.ConstraintLayout>