<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <ImageView
            android:id="@+id/ivBackgroundSignUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/background_app"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <View
            android:id="@+id/ivBackgroundSignUpSmoke"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackgroundSmoke"
            android:padding="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
            android:id="@+id/ivBtnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:focusable="true"
            android:clickable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintVertical_bias="0.0375"/>

    <TextView
            android:id="@+id/tvAppTitleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coffee_dev"
            android:fontFamily="@font/signpainter_housescript"
            android:textColor="@color/colorPrimary"
            android:textSize="56sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.1434"
    />

    <EditText
            android:id="@+id/etEmailLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:fontFamily="@font/rockwell"
            android:layout_marginTop="38dp"
            android:backgroundTint="@color/colorPrimary"
            android:inputType="textEmailAddress"
            app:layout_constraintWidth_percent="0.68"
            app:layout_constraintVertical_bias="0.368"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />

    <EditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:fontFamily="@font/rockwell"
            android:layout_marginTop="44dp"
            android:backgroundTint="@color/colorPrimary"
            android:inputType="textPassword"
            app:layout_constraintWidth_percent="0.68"
            app:layout_constraintVertical_bias="0.0434"
            app:layout_constraintTop_toTopOf="@id/etEmailLogin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />

    <FrameLayout
            android:id="@+id/btnLogIn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/selector_button_create_acc"
            android:layout_marginTop="42dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPassword"
            app:layout_constraintBottom_toTopOf="@id/tvOrLoginWith"
            app:layout_constraintWidth_percent="0.68"
            app:layout_constraintHeight_percent="0.0749">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textSize="16sp"
                android:fontFamily="@font/lucida_console"
                android:layout_gravity="center"/>

    </FrameLayout>
    
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lost_password"
            android:fontFamily="@font/rockwell"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:paddingTop="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnLogIn"/>



</androidx.constraintlayout.widget.ConstraintLayout>